[package]
name = "iroh-test"
version = "0.1.0"
edition = "2024"
include = [
    "src/**/*",
    "images/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
iroh = "0.92"
iroh-docs = { version = "0.92" }
iroh-blobs = { version = "0.94" }
iroh-gossip = { version = "0.92" }
iroh-relay = { version = "0.92" }
iroh-base = { version = "0.92" }

uuid = { version = "*", features = ["v4"] }
futures = "0.3.25"
serde_json = "1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
clap = { version = "4.5.41", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
rand = "0.8.5"
strum = { version = "0.26.1", features = ["derive"] }
